Change the way having allow documents to use other fonts unset works:  convert everything specified into either the monospace or serif/sans-serif generic depending on whether the monospace generic was specified anywhere in the list.  b=159440  r+sr=bzbarsky